first attempt at saving image to Pictures folder (still need to understand why it isn't showing up in gallery)
customer overflow icon

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,9 @@
     <string name="app_name">Mandelbrot</string>
     <string name="action_palette">Palette</string>
     <string name="action_settings">Settings</string>
+    <string name="action_save">Save Image</string>
     <string name="settings_max_iterations_label">Maximum Iterations</string>
+
+    <string name="action_save_success">Image Saved</string>
+    <string name="action_save_fail">Error Saving Image</string>
 </resources>
