palette activity now has multiple pages. Using SlidingTabLayout and SlidingTabStrip from SlidingTabsBasic example.
We can improve on that.

TODO:
1. other palette pages
2. favouriting
3. persistent storage

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,8 @@
 
     <string name="action_save_success">Image Saved</string>
     <string name="action_save_fail">Error Saving Image</string>
+
+    <string name="palette_all">All</string>
+    <string name="palette_favourites">Favourites</string>
+    <string name="palette_community">Community</string>
 </resources>
