Changed activity transition animation to a more distinctive horizontal slide

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,6 @@
     <string name="action_save_fail">Error Saving Image</string>
 
     <string name="colours_all_palettes">All Palettes</string>
-    <string name="colours_favourite_palettes">Favourite Palettes</string>
+    <string name="colours_favourite_palettes">Favourites</string>
     <string name="colours_mixer">Mixer</string>
 </resources>
