animatedZoom on double tap now fully works.
Added GestureSettings singleton class to RenderCanvas module

Settings Activity now has double tap scale slider

Thrashed out the maths to convert zoom factor as used by bitmap zooming and mandelbrot zooming to a scale value as used by ViewPropertyAnimator

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="action_reset_coords">Reset Coordinates</string>
     <string name="settings_max_iterations_label">Maximum Iterations</string>
     <string name="settings_bailout_label">Bailout Value</string>
+    <string name="settings_doubletap_label">Double-Tap Scale</string>
     <string name="settings_action_reset">Reset</string>
 
     <string name="action_save_success">Image Saved</string>
