--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,10 @@
     <string name="settings_max_iterations_label">Maximum Iterations</string>
     <string name="settings_bailout_label">Bailout Value</string>
     <string name="settings_doubletap_label">Double-Tap Scale</string>
+    <string name="settings_rendermode_label">Render Mode</string>
+    <string name="settings_rendermode_topdown">Top/Down</string>
+    <string name="settings_rendermode_centre">Centre/Out</string>
+    <string name="settings_rendermode_minmax">Min/Max</string>
     <string name="settings_action_reset">Reset</string>
 
     <string name="action_save_success">Image Saved</string>
