First attempt at parallel rendering. ProgressView updated to compensate

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="settings_rendermode_label">Render Mode</string>
     <string name="settings_rendermode_topdown">Top/Down</string>
     <string name="settings_rendermode_centre">Centre/Out</string>
-    <string name="settings_progressive_render">Progressive Render (experimental)</string>
+    <string name="settings_parallel_render">Parallel Render (experimental)</string>
     <string name="settings_action_reset">Reset</string>
 
     <string name="action_save_success">Image Saved</string>
