--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,12 @@
 <resources>
     <string name="app_name">Mandelbrot</string>
-    <string name="action_colours">Colours</string>
+
+    <string name="action_palette">Palette</string>
     <string name="action_settings">Settings</string>
     <string name="action_save">Save Image</string>
-    <string name="action_reset_coords">Reset Coordinates</string>
+    <string name="action_reset">Reset Coordinates</string>
     <string name="action_redraw">Redraw</string>
+
     <string name="settings_max_iterations_label">Maximum Iterations</string>
     <string name="settings_bailout_label">Bailout Value</string>
     <string name="settings_doubletap_label">Double-Tap Scale</string>
@@ -17,13 +19,7 @@
     <string name="action_save_success">Image Saved</string>
     <string name="action_save_fail">Error Saving Image</string>
 
-    <string name="colours_all_palettes">All Palettes</string>
-    <string name="colours_favourite_palettes">Favourites</string>
-    <string name="colours_mixer">Mixer</string>
-
-    <string name="dialog_max_iter_ok">Done</string>
-    <string name="dialog_max_iter_more">More Settings</string>
-    <string name="dialog_max_iter_cancel">Cancel</string>
-
-    <string name="settings_intent_iteration_value">iteration_value</string>
+    <string name="dialog_max_iteration_ok">Done</string>
+    <string name="dialog_max_iteration_more">More Settings</string>
+    <string name="dialog_max_iteration_cancel">Cancel</string>
 </resources>
