added basic info pane. we send a reference to a textview to the Mandelbrot instance. this is ugly. next version should send make use of an interface to hide the TextView implementation.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="action_save">Save Image</string>
     <string name="action_reset">Reset Coordinates</string>
     <string name="action_redraw">Redraw</string>
+    <string name="action_toggle_info_pane">Toggle Info Pane</string>
 
     <string name="settings_max_iterations_label">Maximum Iterations</string>
     <string name="settings_bailout_label">Bailout Value</string>
