screen orientation now alterable in SettingsActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,20 +8,25 @@
     <string name="action_redraw">Redraw</string>
     <string name="action_toggle_info_pane">Toggle Info Pane</string>
 
+    <string name="settings_action_reset">Reset</string>
     <string name="settings_max_iterations_label">Maximum Iterations</string>
-    <string name="settings_iterations_rate_label">Iterations (rate of increase)</string>
     <string name="settings_bailout_label">Bailout Value</string>
     <string name="settings_doubletap_label">Double-Tap Scale</string>
     <string name="settings_num_passes_label">Number of Passes</string>
+
+    <string name="settings_iterations_rate_label">Iterations (rate of increase)</string>
+    <string name="settings_iterations_rate_fast">Fast</string>
+    <string name="settings_iterations_rate_normal">Normal</string>
+    <string name="settings_iterations_rate_slow">Slow</string>
+
     <string name="settings_rendermode_label">Render Mode</string>
     <string name="settings_rendermode_topdown">Top/Down</string>
     <string name="settings_rendermode_centre">Centre/Out</string>
     <string name="settings_parallel_render">Parallel Render (experimental)</string>
-    <string name="settings_action_reset">Reset</string>
 
-    <string name="settings_iterations_rate_fast">Fast</string>
-    <string name="settings_iterations_rate_normal">Normal</string>
-    <string name="settings_iterations_rate_slow">Slow</string>
+    <string name="settings_orientation_label">Screen Orientation</string>
+    <string name="settings_orientation_portrait">Portrait</string>
+    <string name="settings_orientation_sensor">Follow Phone Rotation</string>
 
     <string name="action_save_success">Image Saved</string>
     <string name="action_save_fail">Error Saving Image</string>
