--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,14 +32,15 @@
     <string name="settings_orientation_portrait">Portrait</string>
     <string name="settings_orientation_sensor">Auto-rotate</string>
 
-    <string name="palette_action_smoothness">Smoothness</string>
+    <string name="palette_smoothness_label">Smoothness</string>
 
     <string name="action_save_success">Image Saved</string>
     <string name="action_save_fail">Error Saving Image</string>
 
-    <string name="dialog_max_iterations_ok">Done</string>
-    <string name="dialog_max_iterations_more">More Settings</string>
-    <string name="dialog_max_iterations_cancel">Cancel</string>
+    <string name="dialog_ok">Done</string>
+    <string name="dialog_more">More Settings</string>
+    <string name="dialog_cancel">Cancel</string>
+    <string name="dialog_default">Default</string>
 
     <string name="error_ui_alert">* ERROR *</string>
 </resources>
