* added detection for when calculations get too deep    - just log messages for now * added SimpleAsyncTask() class so that we can quickly run one shot AsyncTasks * settings are now restored using SimpleAsyncTask mechanism * moved getStatusBarHeight from Tools class to MandelbrotActionBar class * renamed Tools class to LogTools class * LogTools printDebug() methods will now not print anything if tag is prefixed with LogTools.NO_LOG_PREFIX

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,8 @@
     <string name="action_save_success">Image Saved</string>
     <string name="action_save_fail">Error Saving Image</string>
 
+    <string name="scale_limit_reached">Scaling limit reached!</string>
+
     <string name="dialog_ok">Done</string>
     <string name="dialog_more">More Settings</string>
     <string name="dialog_cancel">Cancel</string>
