* added deep_colour option. if set to false then Bitmaps use config type RGB_565 to save memory, otherwise they use ARGB_8888    - we still use ARGB_888 when we need transparency; for palette swatches and for a transient bitmap in fixateVisibleImage()

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,8 @@
     <string name="settings_orientation_portrait">Portrait</string>
     <string name="settings_orientation_sensor">Auto-rotate</string>
 
+    <string name="settings_deep_colour">Use Deep Colour</string>
+
     <string name="palette_smoothness_label">Smoothness</string>
 
     <string name="action_save_success">Image Saved</string>
